subscribe section form validation done

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fancyapps/fancybox": "^3.5.7",
     "@fancyapps/ui": "^4.0.31",
     "counterup2": "^2.0.2",
+    "jquery-validation": "^1.19.5",
     "save-dev": "^0.0.1-security"
   }
 }
